Fix overview submenu visibility and filesystem page split

--- a/server/static/styles.css
+++ b/server/static/styles.css
@@ -174,6 +174,10 @@ button {
   color: #fff;
 }
 
+.hidden {
+  display: none;
+}
+
 .view-section.hidden {
   display: none;
 }
